[Priyanshu]: Implement Docker and Sonar Qube